@@ -1,6 +1,10 @@
 
 === ppracer 0.5 alpha2 ===
 
+2005-10-24  Volker Stroebel <volker@planetpenguin.de>
+	* src/hier_utils.* src/hier.cpp data/models/*/model.nut
+	removed unused eye values from struct SceneNode
+
 2005-10-22  Volker Stroebel <volker@planetpenguin.de>
 	* (*)
 	some cleanups
